<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cookieInformationTextView"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/cookie_permission" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/button_accept_all_cookies"
            android:layout_width="0dip"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button_green"
            android:text="@string/cookie_accecpt"
            android:textAllCaps="false" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/button_open_cookie_settings"
            android:layout_width="0dip"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button_gray"
            android:text="@string/cookie_adjust"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cookie_label"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cookie_required"
                android:enabled="false"
                android:checked="true"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <CheckBox
                android:id="@+id/checkbox_ad_cookies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cookie_ads"
                android:checked="false"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/button_save_cookie_settings"
            android:layout_width="217dp"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_gray"
            android:text="@string/cookie_save"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
